--- a/WebApplication1/Views/Reports/Index.cshtml
+++ b/WebApplication1/Views/Reports/Index.cshtml
@@ -4,59 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.StartDate)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.EndDate)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.FirstParameter)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.SecondParameter)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.ThirdParameter)
-                </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.StartDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.EndDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstParameter)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SecondParameter)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ThirdParameter)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<h2>Отчёты</h2>
 
 <div>
 
